--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "moment": "^2.24.0",
     "ngx-toastr": "^10.0.2",
     "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
